@@ -9,7 +9,6 @@ TODO: Keep adapting to ADIF 3.0.4
 TODO: Run in memory
 TBD - Add the feature to add and manage several logs.
 TODO: When editing, do not modify the DXCC, keep the saved one
-TODO: When Saving as and after that exit, do not ask to save again.
 
 KLog 0.9.2
 TODO: Add the awards functionality (to manage awa files, TPEA, WAS, ...)
